--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -23,7 +23,6 @@
             app:layout_heightPercent="12%h">
 
             <TextView
-                android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
@@ -46,7 +45,7 @@
             app:cardLightDirection="top"
             app:cardPreventCornerOverlap="false"
             app:cardUseCornerArea="true"
-            app:layout_heightPercent="20%h">
+            app:layout_heightPercent="22%h">
 
             <com.zhy.android.percent.support.PercentRelativeLayout
                 android:layout_width="match_parent"
@@ -71,6 +70,7 @@
                 </com.zhy.android.percent.support.PercentRelativeLayout>
 
                 <TextView
+                    android:id="@+id/tv_next_dis"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_alignParentTop="true"
@@ -84,6 +84,7 @@
                     app:layout_textSizePercent="35%h" />
 
                 <TextView
+                    android:id="@+id/tv_next_road"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_alignParentRight="true"
@@ -91,7 +92,7 @@
                     android:gravity="center"
                     android:lines="1"
                     android:paddingRight="10dp"
-                    android:text="右拐进入香港路"
+                    android:text="进入香港路"
                     android:textColor="#ddd"
                     app:layout_heightPercent="54%h"
                     app:layout_textSizePercent="22%h" />
@@ -109,6 +110,7 @@
             app:layout_widthPercent="16%h">
 
             <TextView
+                android:id="@+id/tv_xiansu"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="3"
@@ -169,6 +171,7 @@
                     android:background="#cdd8db" />
 
                 <TextView
+                    android:id="@+id/tv_msg"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -211,68 +214,11 @@
             android:layout_alignParentRight="true"
             android:indeterminate="false"
             android:max="100"
-            android:progress="30"
+            android:progress="50"
             android:progressDrawable="@drawable/n_dh_progress"
-            android:secondaryProgress="60"
             app:layout_marginBottomPercent="10%h"
             app:layout_marginRightPercent="2%h"
             app:layout_marginTopPercent="5%h" />
 
-        <!--<com.zhy.android.percent.support.PercentRelativeLayout-->
-        <!--android:id="@+id/ll_icon"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:layout_heightPercent="55%h"-->
-        <!--app:layout_widthPercent="55%h">-->
-
-        <!--<ImageView-->
-        <!--android:id="@+id/iv_icon"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:scaleType="fitCenter"-->
-        <!--app:layout_heightPercent="66%h"-->
-        <!--app:layout_widthPercent="66%h" />-->
-        <!--</com.zhy.android.percent.support.PercentRelativeLayout>-->
-
-        <!--<com.zhy.android.percent.support.PercentFrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:layout_heightPercent="30%h">-->
-
-        <!--<com.zhy.android.percent.support.PercentLinearLayout-->
-        <!--android:id="@+id/ll_navi"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical"-->
-        <!--android:visibility="gone">-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/tv_road"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:gravity="center_horizontal|bottom"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--android:paddingBottom="5dp"-->
-        <!--android:text="500米后 胶州路"-->
-        <!--android:textColor="#f1f1f1"-->
-        <!--app:layout_textSizePercent="18%h" />-->
-
-        <!--<TextView-->
-        <!--android:id="@+id/tv_msg"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1"-->
-        <!--android:gravity="center_horizontal|top"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingTop="5dp"-->
-        <!--android:paddingRight="10dp"-->
-        <!--android:text="剩余20公里"-->
-        <!--android:textColor="#f1f1f1"-->
-        <!--app:layout_textSizePercent="18%h" />-->
-        <!--</com.zhy.android.percent.support.PercentLinearLayout>-->
-        <!--</com.zhy.android.percent.support.PercentFrameLayout>-->
     </com.zhy.android.percent.support.PercentRelativeLayout>
 </com.zhy.android.percent.support.PercentLinearLayout>
