--- a/mobile/src/main/res/layout/content_set_system.xml
+++ b/mobile/src/main/res/layout/content_set_system.xml
@@ -43,4 +43,22 @@
         st:type="buttonB" />
 
     <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_money"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="打赏"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_about"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="关于"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
 </LinearLayout>
