--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -9,10 +9,138 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
+    <FrameLayout
+        android:id="@+id/rl_moren"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.wow.carlauncher.common.view.CustomRoundAngleImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            android:src="@mipmap/n_dh_moren"
+            app:radius="10dp" />
+
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_marginLeftPercent="2%h"
+            app:layout_marginRightPercent="2%h">
+
+
+            <com.zhy.android.percent.support.PercentFrameLayout
+                android:id="@+id/fl_top2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_heightPercent="12%h">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:includeFontPadding="false"
+                    android:lines="1"
+                    android:text="高德导航"
+                    app:layout_textSizePercent="50%h" />
+            </com.zhy.android.percent.support.PercentFrameLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_heightPercent="12%h">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#cdd8db" />
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="left">
+
+                        <com.zhy.android.percent.support.PercentLinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            app:layout_widthPercent="100%h">
+
+                            <ImageView
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:src="@mipmap/n_dh_dh"
+                                app:layout_heightPercent="60%h"
+                                app:layout_widthPercent="60%h" />
+                        </com.zhy.android.percent.support.PercentLinearLayout>
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="#cdd8db" />
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/btn_nav_j"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        app:layout_widthPercent="100%h">
+
+                        <ImageView
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:src="@mipmap/n_dh_j"
+                            app:layout_heightPercent="60%h"
+                            app:layout_widthPercent="60%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="#cdd8db" />
+
+                    <com.zhy.android.percent.support.PercentLinearLayout
+                        android:id="@+id/btn_nav_gs"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        app:layout_widthPercent="100%h">
+
+                        <ImageView
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:src="@mipmap/n_dh_gs"
+                            app:layout_heightPercent="60%h"
+                            app:layout_widthPercent="60%h" />
+                    </com.zhy.android.percent.support.PercentLinearLayout>
+                </com.zhy.android.percent.support.PercentLinearLayout>
+            </LinearLayout>
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+    </FrameLayout>
+
     <com.zhy.android.percent.support.PercentRelativeLayout
+        android:id="@+id/rl_daohang"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
@@ -29,7 +157,7 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:lines="1"
-                android:text="导航"
+                android:text="高德导航"
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
 
@@ -132,7 +260,6 @@
         </com.zhy.android.percent.support.PercentLinearLayout>
 
         <LinearLayout
-            android:id="@+id/ll_controller"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
@@ -161,7 +288,7 @@
                         android:id="@+id/iv_mute"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:src="@mipmap/n_dh_bz"
+                        android:src="@mipmap/n_dh_jy"
                         app:layout_heightPercent="60%h"
                         app:layout_widthPercent="60%h" />
                 </com.zhy.android.percent.support.PercentLinearLayout>
