--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -12,7 +12,8 @@
     <FrameLayout
         android:id="@+id/rl_moren"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <com.wow.carlauncher.common.view.CustomRoundAngleImageView
             android:layout_width="match_parent"
@@ -141,7 +142,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
         app:layout_marginLeftPercent="2%h"
         app:layout_marginRightPercent="2%h">
 
@@ -261,6 +261,7 @@
         </com.zhy.android.percent.support.PercentLinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_controller"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentBottom="true"
@@ -289,7 +290,7 @@
                         android:id="@+id/iv_mute"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:src="@mipmap/n_dh_jy"
+                        android:src="@mipmap/n_dh_bjy"
                         app:layout_heightPercent="60%h"
                         app:layout_widthPercent="60%h" />
                 </com.zhy.android.percent.support.PercentLinearLayout>
@@ -335,19 +336,39 @@
             </com.zhy.android.percent.support.PercentLinearLayout>
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
+        <com.zhy.android.percent.support.PercentRelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/ll_controller"
+            android:layout_below="@id/fl_luxian">
+
+            <ImageView
+                android:id="@+id/iv_road"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/n_road1"
+                app:layout_heightPercent="80%h"
+                app:layout_marginTopPercent="15%h"
+                app:layout_widthPercent="75%h" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerHorizontal="true"
+                android:src="@mipmap/n_car"
+                app:layout_heightPercent="34%h"
+                app:layout_marginTopPercent="50%h"
+                app:layout_widthPercent="34%h" />
+        </com.zhy.android.percent.support.PercentRelativeLayout>
+
+        <com.wow.carlauncher.common.LukuangView
+            android:id="@+id/lukuang"
             android:layout_width="5dp"
             android:layout_height="wrap_content"
             android:layout_above="@id/ll_controller"
             android:layout_below="@id/fl_luxian"
             android:layout_alignParentRight="true"
-            android:indeterminate="false"
-            android:max="100"
-            android:progress="50"
-            android:progressDrawable="@drawable/n_dh_progress"
-            android:secondaryProgress="80"
             app:layout_marginBottomPercent="10%h"
             app:layout_marginRightPercent="2%h"
             app:layout_marginTopPercent="5%h" />
